Separate GameRules and ServerGameManager responsibilities